--- a/.github/workflows/products.yml
+++ b/.github/workflows/products.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     paths:
-      - 'packages/products/**' # when change occurs on master branch inside path marketing folder
+      - 'packages/products/**' # when change occurs on master branch inside path authentication folder
 
 defaults:
   run:
@@ -25,9 +25,6 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      # Whenever we update the contents of a file whose name remains same, cloudFront will not pick up
-      # the changes. Hence we need to invalidate the distribution and give name of the files to invalidate
-      # here, since we will use marketing remoteEntry.js in container everytime, therefore we need to invalidate this.
       - run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/products/latest/productsRemoteEntry.js"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
