--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -5,28 +5,32 @@ on:
     branches:
       - master
     paths:
-      - 'packages/container/**'
+      - 'packages/container/**' # when change occurs on master branch inside path container folder
 
 defaults:
   run:
-    working-directory: packages/container
+    working-directory: packages/container # set working directory
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-18.04 # use a ubuntu/linux based virtul machine
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2 # checkout the code in the virtual machine
       - run: npm install
       - run: npm run build
         env:
           PRODUCTION_DOMAIN: ${{ secrets.PRODUCTION_DOMAIN }}
 
-      - uses: shinyinc/action-aws-cli@v1.2
+      - uses: shinyinc/action-aws-cli@v1.2 # deploy to aws using aws cli
       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      # Whenever we update the contents of a file whose name remains same, cloudFront will not pick up
+      # the changes. Hence we need to invalidate the distribution and give name of the files to invalidate
+      # here, since we will use container index.html in container everytime, therefore we need to invalidate this to
+      # get the updated contents on every build. (get new name[hash] of main.[hash].js)
       - run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/container/latest/index.html"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
