--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "webpack serve --config config/webpack.dev.js",
-    "build": "webpack --config config/webpack.prod.js"
+    "prod": "webpack serve --config config/webpack.prod.js",
+    "build": "webpack --config config/webpack.build.js"
   },
   "dependencies": {
     "chart.js": "^2.9.4",
