--- a/packages/products/package.json
+++ b/packages/products/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config ./config/webpack.dev.js",
-    "build": "webpack --config ./config/webpack.prod.js"
+    "prod": "webpack serve --config ./config/webpack.prod.js",
+    "build": "webpack --config ./config/webpack.build.js"
   },
   "author": "ubo.oberoi@gmail.com",
   "license": "ISC",
