--- a/.github/workflows/authentication.yml
+++ b/.github/workflows/authentication.yml
@@ -3,7 +3,7 @@ name: deploy-authentication
 on:
   push:
     branches:
-      - master
+      - v2
     paths:
       - 'packages/authentication/**' # when change occurs on master branch inside path auth folder
 
@@ -21,14 +21,14 @@ jobs:
       - run: yarn run build
 
       - uses: shinyinc/action-aws-cli@v1.2 # deploy to aws using aws cli
-      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/authentication/latest
+      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/authentication/v2
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       # Whenever we update the contents of a file whose name remains same, cloudFront will not pick up
       # the changes. Hence we need to invalidate the distribution and give name of the files to invalidate
       # here, since we will use auth remoteEntry.js in container everytime, therefore we need to invalidate this.
-      - run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/authentication/latest/authenticationRemoteEntry.js"
+      - run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/authentication/v2/authenticationRemoteEntry.js"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
