--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -3,7 +3,7 @@ name: deploy-container
 on:
   push:
     branches:
-      - master
+      - v2
     paths:
       - 'packages/container/**' # when change occurs on master branch inside path container folder
 
@@ -23,7 +23,7 @@ jobs:
           PRODUCTION_DOMAIN: ${{ secrets.PRODUCTION_DOMAIN }}
 
       - uses: shinyinc/action-aws-cli@v1.2 # deploy to aws using aws cli
-      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
+      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/v2
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -31,7 +31,7 @@ jobs:
       # the changes. Hence we need to invalidate the distribution and give name of the files to invalidate
       # here, since we will use container index.html in container everytime, therefore we need to invalidate this to
       # get the updated contents on every build. (get new name[hash] of main.[hash].js)
-      - run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/container/latest/index.html"
+      - run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/container/v2/index.html"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
